@@ -3600,6 +3600,13 @@ operator|new
 name|NonSyncDataOutputBuffer
 argument_list|()
 decl_stmt|;
+name|int
+index|[]
+name|prjColIDs
+init|=
+literal|null
+decl_stmt|;
+comment|// selected column IDs
 comment|/** Create a new RCFile reader. */
 specifier|public
 name|Reader
@@ -3793,6 +3800,46 @@ operator|>
 literal|0
 condition|)
 block|{
+name|boolean
+name|to_skip
+decl_stmt|;
+comment|// default value for skipping a column
+if|if
+condition|(
+name|notSkipIDs
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+operator|&&
+name|notSkipIDs
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|intValue
+argument_list|()
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+comment|// this is the case to get all columns
+name|to_skip
+operator|=
+literal|false
+expr_stmt|;
+block|}
+else|else
+block|{
+name|to_skip
+operator|=
+literal|true
+expr_stmt|;
+block|}
 for|for
 control|(
 name|int
@@ -3815,7 +3862,7 @@ index|[
 name|i
 index|]
 operator|=
-literal|true
+name|to_skip
 expr_stmt|;
 block|}
 for|for
@@ -3843,6 +3890,7 @@ block|}
 block|}
 else|else
 block|{
+comment|// no column name is specified e.g, in select count(1) from tt; skip all columns
 for|for
 control|(
 name|int
@@ -3865,7 +3913,7 @@ index|[
 name|i
 index|]
 operator|=
-literal|false
+literal|true
 expr_stmt|;
 block|}
 block|}
@@ -3913,6 +3961,53 @@ condition|)
 name|loadColumnNum
 operator|-=
 literal|1
+expr_stmt|;
+block|}
+block|}
+comment|// get list of selected column IDs
+name|prjColIDs
+operator|=
+operator|new
+name|int
+index|[
+name|loadColumnNum
+index|]
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|,
+name|j
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|columnNumber
+condition|;
+operator|++
+name|i
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|skippedColIDs
+index|[
+name|i
+index|]
+condition|)
+block|{
+name|prjColIDs
+index|[
+name|j
+operator|++
+index|]
+operator|=
+name|i
 expr_stmt|;
 block|}
 block|}
@@ -4997,26 +5092,28 @@ expr_stmt|;
 for|for
 control|(
 name|int
-name|i
+name|j
 init|=
 literal|0
 init|;
-name|i
+name|j
 operator|<
-name|columnNumber
+name|prjColIDs
+operator|.
+name|length
 condition|;
-name|i
+name|j
 operator|++
 control|)
 block|{
-if|if
-condition|(
-name|skippedColIDs
-index|[
+name|int
 name|i
+init|=
+name|prjColIDs
+index|[
+name|j
 index|]
-condition|)
-continue|continue;
+decl_stmt|;
 name|colValLenBufferReadIn
 index|[
 name|i
@@ -5421,9 +5518,6 @@ block|{
 name|currentValueBuffer
 argument_list|()
 expr_stmt|;
-block|}
-comment|// we do not use BytesWritable here to avoid the byte-copy from
-comment|// DataOutputStream to BytesWritable
 name|ret
 operator|.
 name|resetValid
@@ -5431,25 +5525,35 @@ argument_list|(
 name|columnNumber
 argument_list|)
 expr_stmt|;
+comment|// do this only when not intialized
+block|}
+comment|// we do not use BytesWritable here to avoid the byte-copy from
+comment|// DataOutputStream to BytesWritable
 for|for
 control|(
 name|int
-name|i
-init|=
-literal|0
-init|,
-name|readIndex
+name|j
 init|=
 literal|0
 init|;
-name|i
+name|j
 operator|<
-name|columnNumber
+name|prjColIDs
+operator|.
+name|length
 condition|;
-name|i
 operator|++
+name|j
 control|)
 block|{
+name|int
+name|i
+init|=
+name|prjColIDs
+index|[
+name|j
+index|]
+decl_stmt|;
 name|BytesRefWritable
 name|ref
 init|=
@@ -5460,35 +5564,6 @@ argument_list|(
 name|i
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|skippedColIDs
-index|[
-name|i
-index|]
-condition|)
-block|{
-if|if
-condition|(
-name|ref
-operator|!=
-name|BytesRefWritable
-operator|.
-name|ZeroBytesRefWritable
-condition|)
-name|ret
-operator|.
-name|set
-argument_list|(
-name|i
-argument_list|,
-name|BytesRefWritable
-operator|.
-name|ZeroBytesRefWritable
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
 name|int
 name|columnCurrentRowStart
 init|=
@@ -5533,7 +5608,7 @@ name|currentValue
 operator|.
 name|loadedColumnsValueBuffer
 index|[
-name|readIndex
+name|j
 index|]
 operator|.
 name|getData
@@ -5543,9 +5618,6 @@ name|columnCurrentRowStart
 argument_list|,
 name|length
 argument_list|)
-expr_stmt|;
-name|readIndex
-operator|++
 expr_stmt|;
 block|}
 name|rowFetched
