@@ -179,6 +179,34 @@ name|Text
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
 begin_comment
 comment|/**  * ColumnarStruct is different from LazyStruct in that ColumnarStruct's field  * Object get parsed at its initialize time when call  * {@link #init(BytesRefArrayWritable cols)}, while LazyStruct parse fields in a  * lazy way.  *   */
 end_comment
@@ -193,6 +221,34 @@ name|LazyObject
 index|[]
 name|fields
 decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|ColumnarStruct
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|boolean
+name|initialized
+init|=
+literal|false
+decl_stmt|;
+comment|// init() function is called?
+name|int
+index|[]
+name|prjColIDs
+init|=
+literal|null
+decl_stmt|;
+comment|// list of projected column IDs
 comment|/**    * Construct a ColumnarStruct object with the TypeInfo. It creates the first    * level object at the first place    *     * @param oi    *          the ObjectInspector representing the type of this LazyStruct.    */
 specifier|public
 name|ColumnarStruct
@@ -428,6 +484,7 @@ name|getObject
 argument_list|()
 return|;
 block|}
+comment|/*  ============================  [PERF] ===================================    *  This function is called for every row. Setting up the selected/projected     *  columns at the first call, and don't do that for the following calls.     *  Ideally this should be done in the constructor where we don't need to     *  branch in the function for each row.     *  =========================================================================    */
 specifier|public
 name|void
 name|init
@@ -436,6 +493,88 @@ name|BytesRefArrayWritable
 name|cols
 parameter_list|)
 block|{
+if|if
+condition|(
+name|initialized
+condition|)
+block|{
+comment|// short cut for non-first calls
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|prjColIDs
+operator|.
+name|length
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|int
+name|fieldIndex
+init|=
+name|prjColIDs
+index|[
+name|i
+index|]
+decl_stmt|;
+name|BytesRefWritable
+name|passedInField
+init|=
+name|cols
+operator|.
+name|unCheckedGet
+argument_list|(
+name|fieldIndex
+argument_list|)
+decl_stmt|;
+name|cachedByteArrayRef
+index|[
+name|fieldIndex
+index|]
+operator|.
+name|setData
+argument_list|(
+name|passedInField
+operator|.
+name|getData
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|fields
+index|[
+name|fieldIndex
+index|]
+operator|.
+name|init
+argument_list|(
+name|cachedByteArrayRef
+index|[
+name|fieldIndex
+index|]
+argument_list|,
+name|passedInField
+operator|.
+name|getStart
+argument_list|()
+argument_list|,
+name|passedInField
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+comment|// first time call init()
 name|int
 name|fieldIndex
 init|=
@@ -462,6 +601,19 @@ name|fields
 operator|.
 name|length
 decl_stmt|;
+name|ArrayList
+argument_list|<
+name|Integer
+argument_list|>
+name|tmp_sel_cols
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Integer
+argument_list|>
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 init|;
@@ -473,16 +625,37 @@ name|fieldIndex
 operator|++
 control|)
 block|{
+comment|// call the faster unCheckedGet()
+comment|// alsert: min<= cols.size()
 name|BytesRefWritable
 name|passedInField
 init|=
 name|cols
 operator|.
-name|get
+name|unCheckedGet
 argument_list|(
 name|fieldIndex
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|passedInField
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+comment|// if (fields[fieldIndex] == null)
+comment|// fields[fieldIndex] = LazyFactory.createLazyObject(fieldTypeInfos
+comment|// .get(fieldIndex));
+name|tmp_sel_cols
+operator|.
+name|add
+argument_list|(
+name|fieldIndex
+argument_list|)
+expr_stmt|;
 name|cachedByteArrayRef
 index|[
 name|fieldIndex
@@ -496,18 +669,6 @@ name|getData
 argument_list|()
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|passedInField
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
-comment|// if (fields[fieldIndex] == null)
-comment|// fields[fieldIndex] = LazyFactory.createLazyObject(fieldTypeInfos
-comment|// .get(fieldIndex));
 name|fields
 index|[
 name|fieldIndex
@@ -540,7 +701,6 @@ literal|false
 expr_stmt|;
 block|}
 else|else
-block|{
 name|fieldIsNull
 index|[
 name|fieldIndex
@@ -548,7 +708,6 @@ index|]
 operator|=
 literal|true
 expr_stmt|;
-block|}
 block|}
 for|for
 control|(
@@ -569,6 +728,56 @@ index|]
 operator|=
 literal|true
 expr_stmt|;
+comment|// maintain a list of non-NULL column IDs
+name|prjColIDs
+operator|=
+operator|new
+name|int
+index|[
+name|tmp_sel_cols
+operator|.
+name|size
+argument_list|()
+index|]
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|prjColIDs
+operator|.
+name|length
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|prjColIDs
+index|[
+name|i
+index|]
+operator|=
+name|tmp_sel_cols
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|intValue
+argument_list|()
+expr_stmt|;
+block|}
+name|initialized
+operator|=
+literal|true
+expr_stmt|;
+block|}
 block|}
 name|ArrayList
 argument_list|<
